detection template image

--- a/app/src/main/res/layout-land/activity_car.xml
+++ b/app/src/main/res/layout-land/activity_car.xml
@@ -85,11 +85,10 @@
                 android:id="@+id/captcha_image_view"
                 android:layout_width="182dp"
                 android:layout_height="50dp"
-                android:layout_weight="1"
-                android:src="@drawable/capture" />
+                android:layout_weight="1" />
 
             <EditText
-                android:id="@+id/CuptureEditText"
+                android:id="@+id/captcha_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
