--- a/app/src/main/res/layout-land/activity_fine.xml
+++ b/app/src/main/res/layout-land/activity_fine.xml
@@ -95,7 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
-                android:id="@+id/CuptureEditText"
+                android:id="@+id/captcha_edit_text"
                 android:layout_weight="1" />
     
     
