--- a/app/src/main/res/layout-land/activity_driver.xml
+++ b/app/src/main/res/layout-land/activity_driver.xml
@@ -7,15 +7,17 @@
     android:layout_height="match_parent"
     tools:context="ru.android_studio.olga.gibdd_servis.MainActivity">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"
+        android:id="@+id/include5" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView2"
-        android:layout_below="@+id/include2"
         android:layout_alignParentStart="true"
-        android:scrollIndicators="right">
+        android:scrollIndicators="right"
+        android:layout_above="@+id/NavigationLinearLayout"
+        android:layout_below="@+id/include5">
 
         <LinearLayout
             android:id="@+id/menuLinearLayout"
@@ -136,7 +138,8 @@
                 android:id="@+id/menu_fine_btn"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_ruble_off"/>
+                android:src="@drawable/menu_ruble_off"
+                android:background="@android:color/transparent" />
 
             <View
                 android:layout_width="0dp"
@@ -150,7 +153,8 @@
                 android:id="@+id/menu_driver_btn"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_driver_on"/>
+                android:src="@drawable/menu_driver_on"
+                android:background="@android:color/transparent" />
 
             <View
                 android:layout_width="0dp"
@@ -164,7 +168,8 @@
                 android:id="@+id/menu_car_btn"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_auto_off"/>
+                android:src="@drawable/menu_auto_off"
+                android:background="@android:color/transparent" />
 
             <View
                 android:layout_width="0dp"
@@ -178,7 +183,8 @@
                 android:id="@+id/menu_question_btn"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_question_off"/>
+                android:src="@drawable/menu_question_off"
+                android:background="@android:color/transparent" />
 
             <View
                 android:layout_width="0dp"
