--- a/app/src/main/res/layout-land/activity_fine.xml
+++ b/app/src/main/res/layout-land/activity_fine.xml
@@ -14,7 +14,8 @@
         android:layout_height="match_parent"
         android:id="@+id/scrollView3"
         android:layout_below="@+id/include3"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/NavigationLinearLayout">
 
         <LinearLayout
             android:orientation="vertical"
@@ -137,7 +138,8 @@
             android:id="@+id/menu_fine_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_ruble_off"/>
+            android:src="@android:drawable/presence_online"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
@@ -151,7 +153,8 @@
             android:id="@+id/menu_driver_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_driver_off"/>
+            android:src="@drawable/menu_driver_off"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
@@ -165,7 +168,8 @@
             android:id="@+id/menu_car_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_auto_on"/>
+            android:src="@drawable/menu_auto_off"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
@@ -179,7 +183,8 @@
             android:id="@+id/menu_question_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_question_off"/>
+            android:src="@drawable/menu_question_off"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
