--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -5,14 +5,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"
+        android:id="@+id/include" />
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollIndicators="right"
+        android:layout_below="@+id/include"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:scrollIndicators="right">
+        android:layout_above="@+id/NavigationLinearLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -133,7 +137,8 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_ruble_off" />
+            android:src="@drawable/menu_ruble_off"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
@@ -146,7 +151,8 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_driver_off" />
+            android:src="@drawable/menu_driver_off"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
@@ -157,9 +163,11 @@
             android:id="@+id/menu_car_btn"
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"
+            android:adjustViewBounds="false"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_auto_on" />
+            android:src="@drawable/menu_auto_on"
+            android:visibility="visible"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
@@ -172,7 +180,8 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_question_off" />
+            android:src="@drawable/menu_question_off"
+            android:background="@android:color/transparent" />
 
         <View
             android:layout_width="0dp"
