--- a/app/src/main/res/layout-land/activity_car.xml
+++ b/app/src/main/res/layout-land/activity_car.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:scrollIndicators="right"
-        android:layout_below="@+id/include6"
+        android:layout_below="@+id/toolbar"
         android:layout_above="@+id/NavigationLinearLayout">
 
         <LinearLayout
@@ -133,7 +133,7 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_ruble_off"
+            android:src="@drawable/menu_fine_off"
             android:background="@android:color/transparent" />
 
         <View
