--- a/app/src/main/res/layout-land/activity_driver.xml
+++ b/app/src/main/res/layout-land/activity_driver.xml
@@ -16,7 +16,7 @@
         android:layout_alignParentStart="true"
         android:scrollIndicators="right"
         android:layout_above="@+id/NavigationLinearLayout"
-        android:layout_below="@+id/include5">
+        android:layout_below="@+id/toolbar">
 
         <LinearLayout
             android:id="@+id/menuLinearLayout"
@@ -136,7 +136,7 @@
                 android:id="@+id/menu_fine_btn"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
-                android:src="@drawable/menu_ruble_off"
+                android:src="@drawable/menu_fine_off"
                 android:background="@android:color/transparent" />
 
             <View
