--- a/app/src/main/res/layout-land/activity_fine.xml
+++ b/app/src/main/res/layout-land/activity_fine.xml
@@ -6,14 +6,13 @@
     android:orientation="vertical"
     android:scrollIndicators="right">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/include3" />
+    <include layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView3"
-        android:layout_below="@+id/include3"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/NavigationLinearLayout">
 
@@ -138,7 +137,7 @@
             android:id="@+id/menu_fine_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@android:drawable/presence_online"
+            android:src="@drawable/menu_fine_on"
             android:background="@android:color/transparent" />
 
         <View
