--- a/app/src/main/res/layout-land/activity_question.xml
+++ b/app/src/main/res/layout-land/activity_question.xml
@@ -6,14 +6,13 @@
     android:orientation="vertical"
     android:scrollIndicators="right">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/include4" />
+    <include layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView4"
-        android:layout_below="@+id/include4"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/NavigationLinearLayout">
 
@@ -139,7 +138,7 @@
             android:id="@+id/menu_fine_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/menu_ruble_off"
+            android:src="@drawable/menu_fine_off"
             android:background="@android:color/transparent" />
 
         <View
@@ -184,7 +183,7 @@
             android:id="@+id/menu_question_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@android:drawable/presence_online"
+            android:src="@drawable/menu_question_on"
             android:background="@android:color/transparent" />
 
         <View
