--- a/app/src/main/res/layout/activity_fine.xml
+++ b/app/src/main/res/layout/activity_fine.xml
@@ -5,14 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/include3" />
+    <include layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView3"
-        android:layout_below="@+id/include3"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentStart="true"
         android:scrollIndicators="right"
         android:layout_above="@+id/NavigationLinearLayout">
@@ -131,7 +130,7 @@
             android:id="@+id/menu_fine_btn"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@android:drawable/presence_online"
+            android:src="@drawable/menu_fine_on"
             android:background="@android:color/transparent" />
 
         <View
