make lower size drawable menu icon
add dependencies butterknife

--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -100,7 +100,7 @@
 
 
             <Button
-                android:id="@+id/CheckButton"
+                android:id="@+id/check_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/button_next"
