--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -103,7 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_check"
-                android:id="@+id/CheckButton"
+                android:id="@+id/check_button"
                 android:background="@drawable/button_next"
                 android:textColor="@drawable/text_button" />
 
