hide keyboard when new activity running

--- a/app/src/main/res/layout/activity_fine.xml
+++ b/app/src/main/res/layout/activity_fine.xml
@@ -96,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_check"
-                android:id="@+id/fine_CheckButton_B"
+                android:id="@+id/check_button"
                 android:background="@drawable/button_next"
                 android:textColor="@drawable/text_button" />
 
