--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="toolbarBackground">#00709e</color>
     <color name="toolbarText">#ffffff</color>
     <color name="white">#ffffff</color>
+
+    <color name="colorSplashDrawableBlack">#ffffff</color>
 </resources>
