--- a/app/src/main/res/layout/activity_fine.xml
+++ b/app/src/main/res/layout/activity_fine.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/btn_check"
                 android:id="@+id/check_button"
-                android:background="@drawable/button_next"
+                android:background="@drawable/button_check"
                 android:textColor="@drawable/text_button" />
 
             <View
